mabger-meter/force-app/main/default/objects/Account/fields/Reference_Products__c.field-meta.xml
<CustomField>
    <fullName>Reference_Products__c</fullName>
    <inlineHelpText>Please only select products that this account will provide a reference for.</inlineHelpText>
    <label>Reference Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turnkey (Supply &amp; Install)</fullName>
            </value>
            <value>
                <fullName>BEACON AMA Managed Solution</fullName>
            </value>
            <value>
                <fullName>BEACON AMA Traditional Fixed Network</fullName>
            </value>
            <value>
                <fullName>BEACON AMA Mobile Solution</fullName>
            </value>
            <value>
                <fullName>BEACON AMA Consumer Engagement</fullName>
            </value>
            <value>
                <fullName>ORION Cellular</fullName>
            </value>
            <value>
                <fullName>ORION SE</fullName>
            </value>
            <value>
                <fullName>ORION ME</fullName>
            </value>
            <value>
                <fullName>ORION CE</fullName>
            </value>
            <value>
                <fullName>GALAXY</fullName>
            </value>
            <value>
                <fullName>HR-E LCD</fullName>
            </value>
            <value>
                <fullName>HR-E</fullName>
            </value>
            <value>
                <fullName>RTR</fullName>
            </value>
            <value>
                <fullName>RECORDALL Disc Series - Lead Free Bronze Alloy</fullName>
            </value>
            <value>
                <fullName>RECORDALL Disc Series - Engineered Polymer</fullName>
            </value>
            <value>
                <fullName>E-SERIES Ultrasonic - Stainless Steel</fullName>
            </value>
            <value>
                <fullName>E-SERIES Ultrasonic - Engineered Polymer</fullName>
            </value>
            <value>
                <fullName>RECORDALL Turbo Series</fullName>
            </value>
            <value>
                <fullName>RECORDALL Compound Series</fullName>
            </value>
            <value>
                <fullName>RECORDALL Fire Series Meter (FSMA) &amp; Fire Series Assemblies (FSAA)</fullName>
            </value>
            <value>
                <fullName>ModMAG M-Series</fullName>
            </value>
            <value>
                <fullName>ORION SE Gas</fullName>
            </value>
            <value>
                <fullName>ORION CE Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>