mabger-meter/force-app/main/default/objects/Account/fields/Sales_Credit_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Credit_Name__c</fullName>
    <label>Sales Credit Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>