mabger-meter/force-app/main/default/objects/Account/fields/Sales_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory_Code__c</fullName>
    <formula>CASE(Sales_Territory__c,
&quot;Central&quot;, &quot;CEN&quot;,
&quot;West&quot;, &quot;WES&quot;,
&quot;East&quot;, &quot;EAS&quot;,
&quot;Canada&quot;, &quot;CAN&quot;,
&quot;Mexico&quot;, &quot;MEX&quot;,
&quot;Latin America&quot;, &quot;LAM&quot;,
&quot;Rest of World&quot;, &quot;ROW&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Territory Code</label>
    <type>Text</type>
</CustomField>