mabger-meter/force-app/main/default/objects/Account/fields/Sales_Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Territory Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>