mabger-meter/force-app/main/default/objects/Account/fields/Ship_Hold_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_Hold_Code__c</fullName>
    <label>Ship Hold Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>