mabger-meter/force-app/main/default/objects/Account/fields/Software_Brand__c.field-meta.xml
<CustomField>
    <fullName>Software_Brand__c</fullName>
    <formula>IF(NOT(ISBLANK(BEACON_Portfolio_Created__c)), 
CASE( Organization_Type__c , 
&quot;DC-Distributor Customer&quot;, &quot;BEACON&quot;, 
&quot;ED-Encompass Program Distributor&quot;, &quot;AquaCUE&quot;, 
&quot;FE-Flow End Customer&quot;, &quot;AquaCUE&quot;, 
&quot;FM-Skid Manufacturer/OEM&quot;, &quot;AquaCUE&quot;, 
&quot;HA-Flow House Account&quot;, &quot;AquaCUE&quot;, 
&quot;IR-Flow Industrial/Commercial Rep&quot;, &quot;AquaCUE&quot;, 
&quot;OD-Flow Open Distribution&quot;, &quot;AquaCUE&quot;, 
&quot;TD-Turf Distributor&quot;, &quot;AquaCUE&quot;, 
&quot;UC-Utility Customer&quot;, &quot;BEACON&quot;, 
&quot;UD-Utility Distributor&quot;, &quot;BEACON&quot;, 
&quot;UO-Utility Other&quot;, &quot;BEACON&quot;, 
&quot;WD-WYCO Distributor&quot;, &quot;AquaCUE&quot;, 
&quot;WE-WYCO End Customer/Contractor&quot;, &quot;AquaCUE&quot;, 
&quot;WM-WYCO OEM&quot;, &quot;AquaCUE&quot;, 
&quot;&quot;), 
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software Brand</label>
    <type>Text</type>
</CustomField>