mabger-meter/force-app/main/default/objects/Account/fields/Software_Model__c.field-meta.xml
<CustomField>
    <fullName>Software_Model__c</fullName>
    <description>BEACON portfolio</description>
    <label>Software Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEACON AMA</fullName>
            </value>
            <value>
                <fullName>BEACON HES</fullName>
            </value>
            <value>
                <fullName>PCU Only</fullName>
            </value>
            <value>
                <fullName>Inventory Management Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>