mabger-meter/force-app/main/default/objects/Account/fields/Special_Warranty_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Warranty_Notes__c</fullName>
    <description>As part of a large program, we are offering to a number of customers special (custom) warranties covering ORION Cellular endpoints. The term of the warranty is quite long and we need to be certain that the information can be readily identified by any concerned (i.e. by the legal department, sales, customer service, tech support, marketing, quality) even 10+ years down the road.</description>
    <label>Special Warranty Notes</label>
    <type>TextArea</type>
</CustomField>