mabger-meter/force-app/main/default/objects/Account/fields/Starter_Kit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Starter_Kit_End_Date__c</fullName>
    <label>Starter Kit End Date</label>
    <type>Date</type>
</CustomField>