mabger-meter/force-app/main/default/objects/Account/fields/Starter_Kit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Starter_Kit_Notes__c</fullName>
    <label>Starter Kit Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>