mabger-meter/force-app/main/default/objects/Account/fields/Starter_Kit_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Starter_Kit_Start_Date__c</fullName>
    <label>Starter Kit Start Date</label>
    <type>Date</type>
</CustomField>