mabger-meter/force-app/main/default/objects/Account/fields/Statement_Email__c.field-meta.xml
<CustomField>
    <fullName>Statement_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statement Email</label>
    <type>Checkbox</type>
</CustomField>