mabger-meter/force-app/main/default/objects/Account/fields/Strategic_Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Solution_Architect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify the Strategic Accounts by Solution Architects</description>
    <label>Strategic Solution Architect</label>
    <type>Checkbox</type>
</CustomField>