mabger-meter/force-app/main/default/objects/Account/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Organization_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alliance Partner</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Contractor Infrastructure Installation</fullName>
                <label>Contractor - Infrastructure Installation</label>
            </value>
            <value>
                <fullName>Contractor Meter Installation</fullName>
                <label>Contractor - Meter Installation</label>
            </value>
            <value>
                <fullName>Contractor Meter Testing &amp; Repair</fullName>
                <label>Contractor - Meter Testing &amp; Repair</label>
            </value>
            <value>
                <fullName>Engineering Firm</fullName>
            </value>
            <value>
                <fullName>Exporter</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Installation Firm</fullName>
            </value>
            <value>
                <fullName>Machine/Skid Builder</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Rental House</fullName>
            </value>
            <value>
                <fullName>System Integrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>