mabger-meter/force-app/main/default/objects/Account/fields/Survey_Email_Selections__c.field-meta.xml
<CustomField>
    <fullName>Survey_Email_Selections__c</fullName>
    <description>Various Survey Email Selections</description>
    <inlineHelpText>Enter the desired Survey Email Selection(s)</inlineHelpText>
    <label>Survey Email Selections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>