mabger-meter/force-app/main/default/objects/Account/fields/Survey_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Survey_Opt_Out__c</fullName>
    <description>Various Email Survey selections that the Contact has elected to opt out of</description>
    <inlineHelpText>Select the Email Survey values for the Contact that you want to opt out of sending email surveys.</inlineHelpText>
    <label>Survey Opt Out</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>