mabger-meter/force-app/main/default/objects/Account/fields/Target_Campaign_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Target_Campaign_Initiative__c</fullName>
    <label>Target Campaign Initiative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>