mabger-meter/force-app/main/default/objects/Account/fields/Territory_Sales_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sales_Manager_Id__c</fullName>
    <label>Territory Sales Manager Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>