mabger-meter/force-app/main/default/objects/Account/fields/TMT_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>TMT_Account_Owner__c</fullName>
    <formula>IF(ISPICKVAL(Organization_Type__c, &quot;ED-Encompass Program Distributor&quot;), &quot;Flow Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;FE-Flow End Customer&quot;), &quot;Flow Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;FM-Skid Manufacturer/OEM&quot;), &quot;Flow Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;OD-Flow Open Distribution&quot;), &quot;Flow Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;TD-Turf Distributor&quot;), &quot;Flow Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;WD-Wyco Distributor&quot;), &quot;WYCO Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;WE-Wyco End Customer/Contractor&quot;), &quot;WYCO Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;WM-WYCO OEM&quot;), &quot;WYCO Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;UC-Utility Customer&quot;), &quot;Utility Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;DC-Distributor Customer&quot;), &quot;Utility Direct&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;IR-Flow Industrial/Commercial Rep&quot;), &quot;N/A – Manual&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;HA-Flow House Account&quot;), &quot;N/A – Manual&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;UO-Utility Other&quot;), &quot;N/A – Manual&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;UD-Utility Distributor&quot;), &quot;N/A – Manual&quot;,
IF(ISPICKVAL(Organization_Type__c, &quot;Converted from Lead&quot;), &quot;N/A – Manual&quot;,
&quot;N/A – Manual&quot;)))))))))))))))</formula>
    <label>TMT Account Owner</label>
    <type>Text</type>
</CustomField>