mabger-meter/force-app/main/default/objects/Account/fields/TMT_Search__c.field-meta.xml
<CustomField>
    <fullName>TMT_Search__c</fullName>
    <formula>CASE(UPPER(BillingCountry), 
&quot;UNITED STATES&quot;,&quot;USA-&quot; &amp;   LEFT(BillingPostalCode, 5) , 
&quot;CANADA&quot;, &quot;CAN-&quot; &amp; LEFT(BillingPostalCode, 3),
&quot;MEXICO&quot;, &quot;MEX-&quot; &amp;   UPPER(BillingState) , 
&quot;&quot;)</formula>
    <label>TMT Search</label>
    <type>Text</type>
</CustomField>