mabger-meter/force-app/main/default/objects/Account/fields/Update_Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Update_Account_Relationship__c</fullName>
    <description>When box is checked, the Default Ship To Number is not the same as the Ship To Number on the Default Account Relationship</description>
    <formula>if(Default_Ship_To__c = Default_Acct_Rel_Ship_To_Number__c, False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Default Ship To Number is not the same as the Ship To Number on the Default Account Relationship</inlineHelpText>
    <label>Update Account Relationship</label>
    <type>Checkbox</type>
</CustomField>