mabger-meter/force-app/main/default/objects/Account/fields/Use_As_Reference__c.field-meta.xml
<CustomField>
    <fullName>Use_As_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use As Reference</label>
    <type>Checkbox</type>
</CustomField>