mabger-meter/force-app/main/default/objects/Account/fields/Utlility__c.field-meta.xml
<CustomField>
    <fullName>Utlility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utlility</label>
    <type>Checkbox</type>
</CustomField>