mabger-meter/force-app/main/default/objects/Account/fields/Verified_ORION_LTE__c.field-meta.xml
<CustomField>
    <fullName>Verified_ORION_LTE__c</fullName>
    <description>LTE Last Review Date updates via workflow when this field changes. Only 3 users have access to update this field.</description>
    <label>Verified ORION LTE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>