mabger-meter/force-app/main/default/objects/Account/fields/Verified_ORION_LTE_CAN__c.field-meta.xml
<CustomField>
    <fullName>Verified_ORION_LTE_CAN__c</fullName>
    <description>Limited number of people are able to edit this field.</description>
    <label>Verified ORION LTE-CAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>