mabger-meter/force-app/main/default/objects/Account/fields/Verified_ORION_LTE_M__c.field-meta.xml
<CustomField>
    <fullName>Verified_ORION_LTE_M__c</fullName>
    <description>Limited number of people are able to edit this field.</description>
    <label>Verified ORION LTE-M</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>