mabger-meter/force-app/main/default/objects/Account/fields/X4th_Shift_Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>X4th_Shift_Customer_Notes__c</fullName>
    <description>Notes field for legacy CRM systems.</description>
    <inlineHelpText>These notes were transferred from an older system.</inlineHelpText>
    <label>Legacy System Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>