mabger-meter/force-app/main/default/objects/Account/recordTypes/Badger_Meter_Employee.recordType-meta.xml
<RecordType>
    <fullName>Badger_Meter_Employee</fullName>
    <active>true</active>
    <description>This is an internal employee of Badger Meter</description>
    <label>Badger Meter Employee</label>
</RecordType>