mabger-meter/force-app/main/default/objects/Account/recordTypes/Billing_Vendor.recordType-meta.xml
<RecordType>
    <fullName>Billing_Vendor</fullName>
    <active>true</active>
    <description>Billing Vendors</description>
    <label>Billing Vendor</label>
</RecordType>