mabger-meter/force-app/main/default/objects/Account/recordTypes/Channel_Partner.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner</fullName>
    <active>true</active>
    <description>This is the template that will align with accounts that sell Badger Meter products &amp; services.</description>
    <label>Channel Partner</label>
</RecordType>