mabger-meter/force-app/main/default/objects/Account/recordTypes/Direct_End_Customer.recordType-meta.xml
<RecordType>
    <fullName>Direct_End_Customer</fullName>
    <active>true</active>
    <description>This is the template that will align with accounts that are direct customers of Badger Meter.</description>
    <label>Direct End Customer</label>
</RecordType>