mabger-meter/force-app/main/default/objects/Account/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>This is the template that will align with accounts do not use or sell Badger Meter products &amp; services, but rather partner with End Customers or Channel Partners (e.g. Billing Vendors, Engineering Firms, etc.)</description>
    <label>Other</label>
</RecordType>