mabger-meter/force-app/main/default/objects/Account/validationRules/Account_Validation_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Validation_Currency</fullName>
    <active>true</active>
    <description>Currency cannot be edited once a Customer Number has been assigned. Currency can only be maintained in Infor ERPLX by Credit once a Customer Number has been assigned.</description>
    <errorConditionFormula>ISCHANGED(CurrencyIsoCode) &amp;&amp; NOT(ISBLANK(Customer_Number__c)) &amp;&amp;
(NOT($Profile.Name = &apos;Interface User&apos;))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency cannot be edited once a Customer Number has been assigned. Currency can only be maintained in Infor ERPLX by Credit once a Customer Number has been assigned.</errorMessage>
</ValidationRule>