mabger-meter/force-app/main/default/objects/Account/validationRules/Account_Validation_Customer_Reg_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Validation_Customer_Reg_Country</fullName>
    <active>true</active>
    <description>Customer Registration Country cannot be edited once a Customer Number has been assigned. Customer Registration Country can only be maintained in Infor ERPLX by Credit once a Customer Number has been assigned.</description>
    <errorConditionFormula>ISCHANGED(Customer_Registration_Country__c) &amp;&amp; NOT(ISBLANK(Customer_Number__c)) &amp;&amp; (NOT($Profile.Name = &apos;Interface User&apos;))</errorConditionFormula>
    <errorDisplayField>Customer_Registration_Country__c</errorDisplayField>
    <errorMessage>Customer Registration Country cannot be edited once a Customer Number has been assigned. Customer Registration Country can only be maintained in Infor ERPLX by Credit once a Customer Number has been assigned.</errorMessage>
</ValidationRule>