mabger-meter/force-app/main/default/objects/Account/validationRules/Account_Validation_Customer_Reg_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Validation_Customer_Reg_Number</fullName>
    <active>true</active>
    <description>Customer Registration Number cannot be edited once a Customer Number has been assigned. Customer Registration Number can only be maintained in Infor ERPLX by Credit once a Customer Number has been assigned.</description>
    <errorConditionFormula>ISCHANGED(Customer_Registration_Number__c) &amp;&amp; NOT(ISBLANK(Customer_Number__c)) &amp;&amp; (NOT($Profile.Name = &apos;Interface User&apos;))</errorConditionFormula>
    <errorDisplayField>Customer_Registration_Number__c</errorDisplayField>
    <errorMessage>Customer Registration Number cannot be edited once a Customer Number has been assigned. Customer Registration Number can only be maintained in Infor ERPLX by Credit once a Customer Number has been assigned.</errorMessage>
</ValidationRule>