mabger-meter/force-app/main/default/objects/Account/validationRules/Account_Validation_Language.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Validation_Language</fullName>
    <active>true</active>
    <description>Language cannot be edited once a Customer Number has been assigned. Language can only be maintained in Infor ERPLX by Credit once a Customer Number has been assigned.</description>
    <errorConditionFormula>ISCHANGED(Language__c) &amp;&amp; NOT(ISBLANK(Customer_Number__c)) &amp;&amp; (NOT($Profile.Name = &apos;Interface User&apos;))</errorConditionFormula>
    <errorDisplayField>Language__c</errorDisplayField>
    <errorMessage>Language cannot be edited once a Customer Number has been assigned. Language can only be maintained in Infor ERPLX by Credit once a Customer Number has been assigned.</errorMessage>
</ValidationRule>