mabger-meter/force-app/main/default/objects/Account/validationRules/Billing_Address_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_Validation</fullName>
    <active>true</active>
    <description>Do not allow Billing Address to be maintained if a Customer Number exists.</description>
    <errorConditionFormula>(ISCHANGED(BillingStreet) ||
ISCHANGED(BillingCity) ||
ISCHANGED(BillingState)||
ISCHANGED(BillingPostalCode) ||
ISCHANGED(County__c) 
) &amp;&amp;
NOT(ISBLANK(Customer_Number__c)) &amp;&amp;
(NOT($Profile.Name = &apos;Interface User&apos;) &amp;&amp;
NOT($Profile.Name = &apos;System Administrator&apos;)) &amp;&amp;
NOT(ISCHANGED( Default_Account_Relationship__c ))</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Maintenance of the Billing Address for Accounts with a Customer Number must be maintained in Infor ERPLX.</errorMessage>
</ValidationRule>