mabger-meter/force-app/main/default/objects/Account/validationRules/Org_Type_Validation_for_Company_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Type_Validation_for_Company_10</fullName>
    <active>true</active>
    <description>Org Type on Accounts Object should be &quot;Read only&quot; for company # 10, except:
1. When creating an Account and there is no selection for the Org Type
2. For Inside Sales Users and Admins
3. Users: James Worobetz, Mike Murphy and Mike Huntzinger</description>
    <errorConditionFormula>AND(

ISPICKVAL(Company_Number__c , &quot;10 - BADGER METER, INC. (US)&quot;) ,

(

NOT( $Profile.Name = &apos;System Administrator&apos; ) &amp;&amp;


NOT( $Profile.Name = &apos;2017 Sales User&apos;) &amp;&amp;

NOT( $Profile.Name = &apos;2020 Utility Sales User&apos;) &amp;&amp;

NOT( $User.Alias = &quot; jworo&quot;)&amp;&amp;
NOT( $User.Alias = &quot; mmurp&quot;)&amp;&amp;
NOT( $User.Alias = &quot;mhunt&quot;)


),

ISCHANGED( Organization_Type__c )
)</errorConditionFormula>
    <errorDisplayField>Organization_Type__c</errorDisplayField>
    <errorMessage>Organization type cannot be edited.
Contact the Account Manager or System Administrator to update the Organization Type.</errorMessage>
</ValidationRule>