mabger-meter/force-app/main/default/objects/Account/validationRules/Org_Type_Validation_for_Company_14.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Type_Validation_for_Company_14</fullName>
    <active>true</active>
    <description>Org Type on Accounts Object should be &quot;Read only&quot; for company # 14, except:
1. When creating an Account and there is no selection for the Org Type
2. For  Users: Carina Hirner, Sabrina Stiefel, Natalie Mull, Claudia Schaefer, Kristin Spintler</description>
    <errorConditionFormula>AND(

ISPICKVAL(Company_Number__c , &quot;14 - BADGER METER EUROPA GmbH (Germany)&quot;) ,

(

NOT( $Profile.Name = &apos;System Administrator&apos; ) &amp;&amp;

NOT( $User.Alias = &quot;nmull&quot;) &amp;&amp;
NOT( $User.Alias = &quot;chirn&quot;)&amp;&amp;
NOT( $User.Alias = &quot;sstie&quot;)&amp;&amp;
NOT( $User.Alias = &quot;cscha&quot;) &amp;&amp;
NOT( $User.Alias = &quot;kspin&quot;)


),

ISCHANGED( Organization_Type__c )
)</errorConditionFormula>
    <errorDisplayField>Organization_Type__c</errorDisplayField>
    <errorMessage>Organization type cannot be edited.
Contact the Account Manager or System Administrator to update the Organization Type.</errorMessage>
</ValidationRule>