mabger-meter/force-app/main/default/objects/Account/validationRules/Primary_Sales_Credit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Sales_Credit_Validation</fullName>
    <active>true</active>
    <description>The Primary Sales Credit Number must be 6 characters with leading zeros.</description>
    <errorConditionFormula>AND(OR(LEN( Primary_Sales_Credit_Number__c ) &lt;&gt; 6, 
NOT(ISNUMBER(Primary_Sales_Credit_Number__c ))),
NOT(ISBLANK(Primary_Sales_Credit_Number__c )))</errorConditionFormula>
    <errorDisplayField>Primary_Sales_Credit_Number__c</errorDisplayField>
    <errorMessage>The Primary Sales Credit Number must be 6 characters with leading zeros.</errorMessage>
</ValidationRule>